--- a/imgSlider/assets/css/style.css
+++ b/imgSlider/assets/css/style.css
@@ -1,12 +1,90 @@
-.slide-img {
-    display: none;
-    -webkit-transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -o-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    animation: reveal .5s ease-in-out;
+body {
+  display:flex;
+  justify-content:center;
+  align-items: center;
 }
+*, *:before, *:after {
+  box-sizing: border-box;
+  position: relative;
+  transition-property: transform, opacity, filter;
+  transition-duration: 600ms, 600ms, 600ms;
+  transition-timing-function: cubic-bezier(.5, 0, .5, 1);
+}
+ .status {
+    position: absolute;
+    left:40%;
+    bottom: 10px;
+    display:flex;}
+.slider {
+  position:relative;
+  display: flex;
+  width: 90vw;
+  height: 90vh;
+  overflow: hidden;
+ 
+   
+   
+  }
+   .stat[data-active] {
+      background-color:#fff;
+    }
+   .stat {
+      width:10px;
+      height:10px;
+      background-color:transparent;
+      border-radius:50%;
+      z-index:11;
+      margin: 0px 5px;
+      border: 2px solid #fff;
+    }
 
-.slide-img.active {
+  img {
+    object-fit: cover;
+    object-position: center 80%;
+    width: 100%;
+    height: 100%;
     display: block;
-}
+  }
+  .image {
+    width: 100%;
+    margin-right: -100%;
+    opacity: 0;
+    transform: translateX(-100%);
+   
+  }
+  .image[data-active] {
+    opacity:1;
+    transform: translateX(0);
+   
+  }
+   img {
+      transform: scale(1.4);
+    }
+  .image[data-active] ~.image {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  svg {
+   height: 60px;
+    position:absolute;
+    top:50%;
+    margin-top:-30px;
+    z-index: 1000;
+    cursor: pointer;
+   
+   
+    .path {
+      stroke: #fff;
+      stroke-width:3px;
+      fill:transparent; }
+
+    &#prev {
+      left:10px;
+      /* transform:rotate(180deg); */
+    }
+    &#next {
+      right:5px;
+
+    }
+
+ 
